# TeamVLA

./: .gitignore  CHANGELOG.md  README.md  pyproject.toml  requirements.txt
.github/workflows/: ci.yaml
assets/: README.md
configs/: README.md  common.yaml  drawer.yaml  handoff.yaml  lift.yaml  train_bc.yaml
control/: __init__.py  ik_utils.py  phase_machine.py
control/scripted/: __init__.py  drawer_demo.py  handoff_demo.py  lift_demo.py
data/: __init__.py  dataloader.py  schema.py  writer.py
demos/: app.py
docs/: contributing.md  data_pipeline.md  testing_strategy.md  tooling.md  troubleshooting.md  workflow.md
docs/interfaces/: env_control.md
envs/: __init__.py  core_env.py  sim_state.py
envs/tasks/: __init__.py  base.py  drawer.py  handoff.py  lift.py
eval/: bench.py  metrics.py  rollouts.py
models/: __init__.py  vla_msgpassing.py  vla_singlebrain.py
models/encoders/: __init__.py  language.py  vision.py
planning/: architecture.md  phase_0.md  phase_1.md  phase_2.md  phase_3.md  phase_4.md  phase_5.md  phase_6.md  planning.md  prompt.md
scripts/: collect_demos.py  render_videos.py
tests/: conftest.py  test_bc_trainer.py  test_bc_trainer_stub.py  test_bench_cli.py  test_configs.py  test_data_schema.py  test_dataloader.py  test_demo_app.py  test_encoders.py  test_env_skeleton.py  test_episode_writer.py  test_ik_utils.py  test_imports.py  test_integration_pipeline.py  test_losses.py  test_metrics.py  test_models.py  test_phase_machine.py  test_rollouts.py  test_schedulers.py  test_scripted_policies.py  test_scripts.py  test_task_registry.py
tests/fixtures/: scripted_policy_sample.json
tests/fixtures/checkpoints/: bc_stub.ckpt
tests/fixtures/data/: lift_sample.npz
tests/utils/: __init__.py
train/: bc_trainer.py  losses.py  schedulers.py
